# bevy-quickstart-book

./: .gitignore  Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml
bevy-workshop/src/: setup.md
book/: book.toml
book/src/: SUMMARY.md  setup.md  target.md  terms.md  welcome.md
book/src/1-intro/: application.md  exercises.md  plugins.md  progress.md  states.md  systems.md  updating.md
book/src/2-basics/: assets.md  exercises1.md  exercises2.md  physics-continued.md  physics.md
book/src/3-level/: exercises.md  loading.md
book/src/4-actions/: exercises.md
book/src/5-sound/: firing.md
quickstart-book/: book.toml
quickstart-book/src/: setup.md  welcome.md
quickstart-book/src/1-intro/: application.md
quickstart-book/src/5-sound/: exercises.md
quickstart-book/src/6-visuals/: exercises.md
src/: game.rs  input.rs  main.rs  physics.rs  splash.rs  starfield.rs
wasm/: index.html
