[package]
name = "game"
version = "0.1.0"
edition = "2024"

[features]
debug = []

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "bevy_gizmos",
    "wav",
    "png",
    "x11",
    "wayland",
    "webgl2",
] }
bevy_enhanced_input = "0.11.0"
bevy_enoki = "0.4.0"
rand = "0.8"
thiserror = "2.0.12"
